--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.learn.iet-framework": "1.2.3",
     "com.unity.postprocessing": "3.2.1",
     "com.unity.purchasing": "4.1.3",
+    "com.unity.purchasing.udp": "2.0.0",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
